[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/customer/spawner/CustomerSpawner.gd" type="Script" id=1]

[node name="CustomerSpawner" type="Spatial"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="RampDifficultyTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="RampDifficultyTimer" to="." method="_on_RampDifficultyTimer_timeout"]
